@@ -1,5 +1,9 @@
 2016-11-02 Albert Chu <chu11@llnl.gov>
 
+	* libfreeipmi/util/ipmi-error-util.c (ipmi_completion_code_strerror_r):
+	Remove buggy code which explains Master/Read write error from
+	ChangeLog on 2015-09-09.
+	
 	* libfreeipmi/include/freeipmi/spec/ipmi-iana-enterprise-numbers-spec.h:
 	Add macro for maximum IANA numbers.
 	
